# async_stagger

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.rst  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish-pypi.yaml  publish-testpypi.yaml  pytest.yaml
async_stagger/: __init__.py  aitertools.py  conftest.py  constants.py  debug.py  exceptions.py  happy_eyeballs.py  resolver.py  resolvers.py  stagger.py  test_aitertools.py  test_happy_eyeballs.py  test_resolver.py  test_resolvers.py  test_stagger.py  typing.py
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat  reference.rst  requirements.txt
